Bug 15384 - net ads lookup (with unspecified realm) fails
Summary: net ads lookup (with unspecified realm) fails
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Tools (show other bugs)
Version: 4.18.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-02 13:51 UTC by Noel Power
Modified: 2023-09-07 09:02 UTC (History)
2 users (show)

See Also:


Attachments
backport for 4.18 (1.50 KB, patch)
2023-06-06 08:55 UTC, Noel Power
npower: review? (metze)
asn: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2023-06-02 13:51:23 UTC
since 4.18.2 there is a regression

specifically
   net -s dummy-smb.conf ads lookup -S dcmachine.realm

fails (where dummy-smb.conf is effectively empty)

now fails always with

Didn't find the cldap server!
return code = -1
Comment 2 Samba QA Contact 2023-06-04 12:43:04 UTC
This bug was referenced in samba master:

22ab42c1007775abca0b578744d4c18a85cda627
Comment 3 Noel Power 2023-06-06 08:55:02 UTC
Created attachment 17907 [details]
backport for 4.18
Comment 4 Andreas Schneider 2023-06-12 08:04:33 UTC
Jule, please apply the patch to 4.18. Thanks!
Comment 5 Jule Anger 2023-06-12 08:33:16 UTC
Pushed to autobuild-v4-18-test.
Comment 6 Samba QA Contact 2023-06-19 10:30:16 UTC
This bug was referenced in samba v4-18-test:

d2c86925f62012f0fe017a16ce4cef5fd47e17c3
Comment 7 Jule Anger 2023-06-19 11:36:10 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2023-07-05 11:34:47 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.4):

d2c86925f62012f0fe017a16ce4cef5fd47e17c3
Comment 9 Noel Power 2023-08-02 08:47:06 UTC
sorry, seems I made a little mistake and failed to see that this patch also needs backporting to 4.17 (this bug is relevant also on 4.17.8 onwards)

Jule, could you please backport this to 4.17 also (the patch attached patch also applies for me on v4-17-test)
Comment 10 Jule Anger 2023-08-02 09:06:53 UTC
Pushed to autobuild-v4-17-test :-)
Comment 11 Samba QA Contact 2023-08-02 11:45:04 UTC
This bug was referenced in samba v4-17-test:

d94cbb10b882d52782cbabc1328c751cea4cb86f
Comment 12 Jule Anger 2023-08-02 12:03:25 UTC
Closing out bug report.

Thanks!
Comment 13 Samba QA Contact 2023-09-07 09:02:50 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.11):

d94cbb10b882d52782cbabc1328c751cea4cb86f